Fixed overflow scroll issue

--- a/public/styles/sass/_app.scss
+++ b/public/styles/sass/_app.scss
@@ -3,6 +3,7 @@
 .mainContainer {
   height: 92vh;
   overflow: scroll;
+  overflow-x: hidden;
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
 }
@@ -17,7 +18,7 @@ body {
 
 @media (max-width: 600px) {
   .mainContainer {
-    overflow: auto;
+    // overflow-x: hidden;
     scroll-snap-type: none;
     scroll-behavior: auto;
   }
